--- a/application-prod.yml
+++ b/application-prod.yml
@@ -1,1 +1,9 @@
-
+spring:
+  application:
+    name: PROD-SERVICE
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
